Add player interaction tagging plugin base